Fixed notifyContainer z-index and top

--- a/scss/_notify.scss
+++ b/scss/_notify.scss
@@ -1,8 +1,9 @@
 div#notifyContainer {
     position: fixed;
-    top: 10px;
+    top: 70px;
     overflow: hidden;
     width: 100%;
+    z-index: 1000;
 }
 
 div.notification {
